Fixed the overflow in the modal-card

--- a/backend/notice_project/frontend/src/components/NoticeBoard/ViewNoticeCardModal/ViewNotice.css
+++ b/backend/notice_project/frontend/src/components/NoticeBoard/ViewNoticeCardModal/ViewNotice.css
@@ -23,6 +23,8 @@ body {
   left: 0;
   top: -10px;
   background: rgba(114, 116, 114, 0.3);
+  overflow-wrap: break-word;
+  overflow-y: scroll;
 }
 
 .container::before {
@@ -37,6 +39,7 @@ body {
   left: 35.8%;
   background-color: #fff;
   opacity: 1;
+  overflow-wrap: break-word;
 }
 
 .user-picture {
@@ -126,22 +129,22 @@ body {
 
 @media (max-width: 800px) {
   .modal-card {
-    left: 25%;
+    left: auto;
+    right: auto;
   }
 }
 
-@media (max-width: 540px) {
+/* @media (max-width: 540px) {
   .modal-card {
     left: 15%;
   }
-}
+} */
 
 @media (max-width: 500px) {
   .modal-card {
     width: 300px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: auto;
+    right: auto;
   }
 
   .cancel-btn-container {
@@ -158,7 +161,7 @@ body {
   }
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .modal-card {
     margin-top: -50px;
   }
@@ -168,4 +171,4 @@ body {
   .modal-card {
     margin-top: 0;
   }
-}
+} */
